# rust-axum

./: Cargo.toml  README.md  data.rs
.cargo/: config.toml
sql/dev_initial/: 00-recreate-db.sql  01-create-schema.sql
sql/model/: error.rs  mod.rs  task.rs
sql/model/store/: error.rs
src/: config.rs  ctx.rs  error.rs  log.rs  main.rs  model.rs
src/_dev_utils/: dev_db.rs  mod.rs
src/examples/: quick_dev.rs
src/web/: auth_middleware.rs  mod.rs  routes_login.rs  routes_static.rs  routes_tickets.rs
tests/: quick_dev.rs
