[package]
name = "first_project"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
# Serde / json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
"serde_with" = "2"


# Axum
axum = "0.7"
tower = "0.4"
tower-cookies = "0.10"
tower-http = { version = "0.5", features = ["fs"] }

# Others
lazy-regex = "2"
async-trait = "0.1"
strum_macros = "0.24"
uuid = { version = "1", features = ["v4", "fast-rng"]}

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
